/*
 *
 */

2008-11-01 12:49 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  * GNUmakefile
  * samples/arrbrowser/GNUmakefile
    * generated with bakefile 0.2.5-1

  * src/hrbcompat/errorsys/wxherrorsys.prg
    * killed the GUI before we go on QUIT

  + src/wxbase/miscfuncs/procctrlfuncs.cpp
    + added wxKill(), wxGetProcessId()

  * wxharbour.spec
    * added some missing include files

2008-11-01 11:03 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  + samples/arrbrowser
  + samples/arrbrowser/arrbrowser.bkl
  + samples/arrbrowser/arrbrowser.prg
  + samples/arrbrowser/GNUmakefile
  + samples/arrbrowser/makefile.gcc
  + samples/arrbrowser/makefile.vc
    + added sample for browsing a array

  * samples/dbbrowser/dbbrowser.prg
    * added missing include

2008-10-31 19:09 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  * GNUmakefile
  + include/dialog.ch
  + include/toplevel.ch
  + include/wxbase/wx_messagedialog.h
  + src/hrbcompat/errorsys
  + src/hrbcompat/errorsys/wxherrorsys.prg
  + src/hrbcompat/misc/wxhfunctions.prg
  + src/wxbase/comdialogs/wxhmessagedialog.prg
  + src/wxbase/comdialogs/wx_messagedialog.cpp
  * makefile.gcc
  * makefile.vc
  * wxharbour.bkl
    + added wxhErrorSys prg, to handle/show errors
    + added wxhfunctions prg (we need to do a general name cleaning)
    + added wxMessageDialog class
    + added dialog.ch, toplevel.ch includes.


  * include/wxbase/wx_app.h
    + added wx_App:OnExit() c++ method

  * include/wxharbour.ch
    + added some define labels to use in wxherrorsys.prg

  * src/hrbcompat/misc/wx_functions.cpp
    + added wxExit() function

  * src/hrbcompat/misc/wxGET.prg
    * minor cleanup

  * src/hrbcompat/tbrowse/wxhbrowse.prg
    * added array handle to AddAllColumns()
    * minor change on handling of WXK_PAGEUP/WXK_PAGEDOWN

  * src/wxbase/app/wx_app.cpp
  * src/wxbase/app/wxhapp.prg
    + added wx_App::OnExit(), trying to execute hb QUIT command in here.